client/src/App.css
html {
  box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}

.App {
  text-align: center;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 40vmin;
  pointer-events: none;
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

.blogUi:focus {
  outline: none
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}



.editor-wrapper {
  padding: 1rem;
  padding-left: 0;
  border: 1px solid gray;
  min-height: calc(100vh - 65px);
  display: flex;
  /* justify-content: space-around; */
  align-items: flex-start;
}


.DraftEditor-root {
  padding: 1rem;
  overflow: hidden;
  width: 100%;
}

.editor-container {
  margin: 3rem auto 0 2rem;
  max-width: 728px;
}

.menu-inline-wrapper {
    -webkit-transition: top 75ms ease-out,left 75ms ease-out;
    transition: top 75ms ease-out,left 75ms ease-out;
    -webkit-animation: pop-upwards 180ms forwards linear;
    animation: pop-upwards 180ms forwards linear;
    background-image: linear-gradient(to bottom,rgba(49,49,47,.99),#262625);
    background-repeat: repeat-x;
    -webkit-border-radius: 5px;
    border-radius: 5px;


    position: sticky;
    top: 5rem;
      display: -webkit-inline-box;
      display: -ms-inline-flexbox;
      display: inline-flex;
      vertical-align: middle;
      -webkit-box-orient: vertical;
      -webkit-box-direction: normal;
      -ms-flex-direction: column;
      flex-direction: column;
      -webkit-box-align: start;
      -ms-flex-align: start;
      align-items: flex-start;
      -webkit-box-pack: center;
      -ms-flex-pack: center;
      justify-content: center;
      margin: 7rem 0;
}


.header-dropdown {
  background-color: #262625;
  width: fit-content;
  border-radius: 5px;
}

.header-btn {
  background: rgba(0,0,0,0);
  color: #fff;
  border: 0;
  padding: .5rem;
  outline: none;
  width: 100%;
}

.header-btn:hover {
  background-color: rgba(78, 78, 75, 0.99);
}


.menu-inline-inner {
  position: relative;
  background-image: linear-gradient(to bottom,rgba(49,49,47,.99),#262625);
  background-repeat: repeat-x;
  -webkit-border-radius: 5px;
  border-radius: 5px;
  padding: 0 10px;
}

.menu-inline-btn {
  height: 44px;
  line-height: 46px;
  vertical-align: middle;
  border: 0;
  color: #fff;
 
  padding: 0 .5rem;

  transition: .1s background-color,.1s border-color,.1s color,.1s fill;
  position: relative;
  background: rgba(0,0,0,0);
  text-decoration: none;
  cursor: pointer;
  font-family: medium-content-sans-serif-font,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
  letter-spacing: 0;
  font-weight: 400;
  font-style: normal;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  outline: transparent;



  overflow: visible;
  display: inline-block;
  text-align: center;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  font-size: 1rem;
  -webkit-box-flex: 0;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  width: 100%;
}

.menu-inline-btn:hover {
  background-color: rgba(78, 78, 75, 0.99);
  transform: scale(1.2);
}


.public-DraftEditorPlaceholder-root {
  color: #9197a3;
  position: absolute;
  z-index: 0;
  font-size: 2em;
}

.RichEditor-blockquote {
  padding: 1rem;
  font-family: Menlo,Monaco,"Courier New",Courier,monospace;
  background: rgba(0,0,0,.05);
  white-space: pre-wrap;
}


.RichEditor-unstyled {
  font-size: 18px;
}


.navbar {
  display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    padding-left: 0;
    margin-bottom: 0;
    list-style: none;
    justify-content: flex-end;
}

.nav-item {
  margin-bottom: -1px;
}

.nav-link {
  border: 1px solid transparent;
  border-top-left-radius: .25rem;
  border-top-right-radius: .25rem;
  display: block;
  padding: .5rem 1rem;
}

.dropdown {
  position: relative;
}

.dropdown-toggle::after {
  display: inline-block;
  width: 0;
  height: 0;
  margin-left: .255em;
  vertical-align: .1em;
  content: "";
  border-top: .3em solid;
  border-right: .3em solid transparent;
  border-bottom: 0;
  border-left: .3em solid transparent;
}

.dropdown-menu {
  position: absolute;
  transform: translate3d(0px, 42px, 0px);
  top: 0px;
  left: 0px;
  will-change: transform;
  margin-top: -1px;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  display: block;

  left: 0;
  z-index: 1000;
  float: left;
  min-width: 10rem;
  padding: .5rem 0;
  margin: .125rem 0 0;
  font-size: 1rem;
  color: #212529;
  text-align: left;
  list-style: none;
  background-color: #fff;
  background-clip: padding-box;
  border: 1px solid rgba(0,0,0,.15);
  border-radius: .25rem;
}

.dropdown-item {
  display: block;
  width: 100%;
  padding: .25rem 1.5rem;
  clear: both;
  font-weight: 400;
  color: #212529;
  text-align: inherit;
  white-space: nowrap;
  background-color: transparent;
  border: 0;
}

.modal.fade {
  position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: 1050;
    /* display: none; */
    overflow: hidden;
    outline: 0;
    z-index: 1072;
    opacity: 1;
    overflow-x: hidden;
    overflow-y: auto;
    /* display: block; */
    padding-right: 17px;
    display: flex;
}

.modal-dialog {
  position: relative;
    width: auto;
    margin: .5rem;
    pointer-events: none;
    -webkit-transform: translate(0,0);
    transform: translate(0,0);
    max-width: 700px;
    margin: auto;
}

.modal-content {
  position: relative;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
    width: 100%;
    pointer-events: auto;
    background-color: #fff;
    background-clip: padding-box;
    border: 1px solid rgba(0,0,0,.2);
    border-radius: .3rem;
    outline: 0;
}

.modal-header {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: flex-start;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 1rem;
  border-bottom: 1px solid #e9ecef;
  border-top-left-radius: .3rem;
  border-top-right-radius: .3rem;
}

.modal-body {
  padding: 1.5rem;
    margin-right: 0;
    margin-left: 0;
    border-width: .2rem;
    border: solid #f7f7f9;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    max-height: calc(100vh - 200px);
    overflow-y: auto;
}

.modal-footer {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 1rem;
  border-top: 1px solid #e9ecef;
}

